[project]
name = "disk-io-bm"
version = "0.1.0"
description = "Disk I/O benchmarking tool using fio"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.1",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "pydantic>=2.5.0",
    "openpyxl>=3.1.0",
    "numpy>=1.24.0",
]

[project.scripts]
disk-benchmark-py = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
